<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UI.KatalogFragment">

    <Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/love"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/catalog"
        android:textSize="@dimen/text_of_tool"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="@+id/toolbar2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageBrick"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_brick"
        android:layout_marginStart="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/textBrick"
        app:layout_constraintStart_toEndOf="@+id/textBrick"
        app:layout_constraintTop_toTopOf="@+id/textBrick" />

    <ImageView
        android:id="@+id/imageCement"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_cement"
        android:layout_marginStart="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/textCement"
        app:layout_constraintStart_toEndOf="@+id/textCement"
        app:layout_constraintTop_toTopOf="@+id/textCement" />

    <ImageView
        android:id="@+id/imageGravel"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_gravel"
        android:layout_marginStart="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/textGravel"
        app:layout_constraintStart_toEndOf="@+id/textGravel"
        app:layout_constraintTop_toTopOf="@+id/textGravel" />

    <TextView
        android:id="@+id/textBrick"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:text="@string/BricsR"
        android:textColor="@color/black"
        android:textSize="@dimen/text_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <TextView
        android:id="@+id/textCement"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="65dp"
        android:text="@string/CementR"
        android:textSize="@dimen/text_margin"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBrick" />

    <TextView
        android:id="@+id/textGravel"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="65dp"
        android:text="@string/GravelR"
        android:textSize="@dimen/text_margin"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCement" />

    <TextView
        android:id="@+id/textMetal"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="65dp"
        android:text="@string/MetalR"
        android:textSize="@dimen/text_margin"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textGravel" />

    <ImageView
        android:id="@+id/imageMetal"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="60dp"
        android:src="@drawable/ic_netal"
        app:layout_constraintBottom_toBottomOf="@+id/textMetal"
        app:layout_constraintStart_toEndOf="@+id/textMetal"
        app:layout_constraintTop_toTopOf="@+id/textMetal" />

    <TextView
        android:id="@+id/allCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/allCategories"
        android:textSize="@dimen/text_of_tool"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

</androidx.constraintlayout.widget.ConstraintLayout>